new run of picks and work.

--- a/Processing_Notebooks/cable_map.ipynb
+++ b/Processing_Notebooks/cable_map.ipynb
@@ -19,10 +19,10 @@
     "import obspy\n",
     "from obspy.signal.trigger import recursive_sta_lta, plot_trigger, trigger_onset\n",
     "import pickle as pkl\n",
-    "from sklearn import neighbors\n",
+    "# from sklearn import neighbors\n",
+    "# from sklearn.cluster import DBSCAN\n",
     "import copy\n",
-    "from sklearn.cluster import DBSCAN\n",
-    "import emcee\n",
+    "# import emcee\n",
     "import pandas as pd\n",
     "import rasterio\n",
     "from rasterio.plot import show\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "e1aeb0c1",
    "metadata": {},
    "outputs": [
