--- a/Processing_Notebooks/event_finding.ipynb
+++ b/Processing_Notebooks/event_finding.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "423749aa",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "8da1e52d",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "ade48c79",
    "metadata": {},
    "outputs": [],
@@ -320,11 +320,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "id": "23bfa0e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_arr = np.zeros((int(fs*60),data_normed_all_axis.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "f9664349",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "first_filler = np.array([data_normed_all_axis[:,0]]*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "89a8d439",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]], shape=(120000, 351))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2175400d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.58394154,  1.12372312,  4.026466  , ...,  0.72950154,\n",
+       "        -2.13838135,  0.46613113],\n",
+       "       [ 0.58394154,  1.12372312,  4.026466  , ...,  0.72950154,\n",
+       "        -2.13838135,  0.46613113],\n",
+       "       [ 0.58394154,  1.12372312,  4.026466  , ...,  0.72950154,\n",
+       "        -2.13838135,  0.46613113],\n",
+       "       ...,\n",
+       "       [ 0.58394154,  1.12372312,  4.026466  , ...,  0.72950154,\n",
+       "        -2.13838135,  0.46613113],\n",
+       "       [ 0.58394154,  1.12372312,  4.026466  , ...,  0.72950154,\n",
+       "        -2.13838135,  0.46613113],\n",
+       "       [ 0.58394154,  1.12372312,  4.026466  , ...,  0.72950154,\n",
+       "        -2.13838135,  0.46613113]], shape=(100, 351))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_filler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4f3e7fae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_arr[:first_filler.shape[0],:] = first_filler"
+   ]
   },
   {
    "cell_type": "code",
