--- a/Processing_Notebooks/event_finding_parallel.ipynb
+++ b/Processing_Notebooks/event_finding_parallel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "b681b169",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,9 @@
     "import pyTMD.utilities\n",
     "import timescale.time\n",
     "\n",
+    "np.float_ = np.float64\n",
+    "import dascore as dc\n",
+    "\n",
     "def sintela_to_datetime(sintela_times):\n",
     "    '''\n",
     "    returns an array of datetime.datetime \n",
@@ -74,13 +77,26 @@
     "\n",
     "\n",
     "    fs = attrs['PulseRate'] #sample rate\n",
+    "    bp_top = 200\n",
+    "    bp_bottom = 1\n",
+    "    downsample_rate = int(fs/bp_top)\n",
     "\n",
-    "    #filter\n",
-    "    sos = signal.butter(10, [1,200], 'bp', fs=fs, output='sos')\n",
+    "    #filter by freq\n",
+    "    sos = signal.butter(10, [bp_bottom,bp_top], 'bp', fs=fs, output='sos')\n",
     "    filtered = signal.sosfiltfilt(sos, data, axis=0)\n",
     "\n",
+    "    #FK filter\n",
+    "    new_format_times = time_fixer_4_fk(times)\n",
+    "    dims = ('time', 'distance')\n",
+    "    patch = dc.Patch(data=filtered, coords=dict(time=[np.datetime64(i) for i in new_format_times], distance=x), dims=dims)\n",
+    "    filt_cutoffs = np.array([0, 400, 8000, np.inf])\n",
+    "\n",
+    "    fk_filtered = patch.slope_filter(filt=filt_cutoffs)\n",
+    "    fk_filtered_data = np.array(fk_filtered.data)\n",
+    "\n",
+    "\n",
     "    #normalize\n",
-    "    data_normed_filtered = chan_norm(filtered)\n",
+    "    data_normed_filtered = chan_norm(fk_filtered_data)\n",
     "\n",
     "    if file[-9:-7] != '00':\n",
     "        time_start = times[0] - datetime.timedelta(seconds=times[0].second, microseconds=times[0].microsecond)\n",
@@ -93,21 +109,34 @@
     "\n",
     "    # this_time = np.arange(0,int(fs*60))* 500 + this_time[0]\n",
     "    # print(this_time)\n",
-    "\n",
-    "\n",
+    "    # print(filled_data.shape)\n",
+    "    # print(first_filler.shape)\n",
     "    filled_data = np.zeros((int(fs*60),data_normed_filtered.shape[1]))\n",
     "    filled_times = np.zeros((int(fs*60)), dtype=object)\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "    if data_locator[0]==0:\n",
+    "        filled_data[data_locator] = data_normed_filtered\n",
+    "\n",
+    "    else:\n",
+    "        first_filler = np.array([data_normed_filtered[:,0]]*data_locator[0])\n",
+    "        filled_data[:first_filler.shape[0],:] = first_filler\n",
+    "    \n",
+    "    filt_filled_data = filled_data\n",
+    "\n",
     "    filled_times[data_locator] = times\n",
-    "    filled_data[data_locator] = data_normed_filtered\n",
-    "    filt_filled_data = filled_data[:,:]\n",
+    "    # filled_data[data_locator] = data_normed_filtered.T\n",
+    "\n",
+    "    # filt_filled_data = filled_data\n",
     "\n",
     "    ## Downsample \n",
-    "    filled_times = filled_times[::10]\n",
-    "    filt_filled_data = filt_filled_data[::10,::10]\n",
+    "    filled_times = filled_times[::downsample_rate]\n",
+    "    filt_filled_data = filt_filled_data[::downsample_rate,::5] #Skip every 5th channel\n",
     "    new_dict = dict(attrs)\n",
-    "    new_dict['PulseRate'] = new_dict['PulseRate']/10\n",
+    "    new_dict['PulseRate'] = new_dict['PulseRate']/downsample_rate\n",
+    "\n",
     "\n",
     "    return filt_filled_data, filled_times, new_dict\n",
     "\n",
@@ -118,10 +147,10 @@
     "    return res\n",
     "\n",
     "def chan_norm(das_data):\n",
-    "    data_normed = (das_data - np.mean(das_data, axis=0))/np.std(das_data, axis=0)\n",
-    "    data_normed_all_axis = (data_normed.T - np.mean(data_normed, axis=1))/np.std(data_normed, axis=1).T    \n",
+    "    data_normed = (das_data - np.mean(das_data, axis=0))/np.std(das_data, axis=0).T\n",
+    "    # data_normed_all_axis = (data_normed.T - np.mean(data_normed, axis=1))/np.std(data_normed, axis=1)   \n",
     "\n",
-    "    return data_normed_all_axis\n",
+    "    return data_normed\n",
     "\n",
     "class DataStats:\n",
     "    def __init__(self, data, attrs, times):\n",
@@ -179,7 +208,49 @@
     "        trigger_times_list_datetime.append(times_all[trigs_samp_time])\n",
     "    return {str(channel): trigger_times_list_datetime}\n",
     "\n",
+    "\n",
+    "def time_fixer_4_fk(times):\n",
+    "    times_copy = times.copy()\n",
+    "    new_format_times = []\n",
+    "    for i in times_copy:\n",
+    "        if round(i.microsecond/500)*500 == 1000000:\n",
+    "            microsecond = 0\n",
+    "            second = i.second + 1\n",
+    "            minute = i.minute\n",
+    "            hour = i.hour\n",
+    "            day = i.day\n",
+    "            if second == 60:\n",
+    "                second = 0\n",
+    "                minute = minute+1\n",
+    "\n",
+    "            if minute == 60:\n",
+    "                minute = 0\n",
+    "                hour=hour+1\n",
+    "            \n",
+    "            if hour == 24:\n",
+    "                hour = 0\n",
+    "                day = day+1\n",
+    "            \n",
+    "        else:\n",
+    "            microsecond = int(round(i.microsecond/500)*500)\n",
+    "            second = i.second\n",
+    "            minute = i.minute\n",
+    "            hour = i.hour\n",
+    "            day = i.day\n",
+    "\n",
+    "        new_format_times.append(datetime.datetime(year=i.year,\n",
+    "                                                month=i.month,\n",
+    "                                                day=day,\n",
+    "                                                hour=hour,\n",
+    "                                                minute=minute,\n",
+    "                                                second=second,\n",
+    "                                                microsecond=microsecond))\n",
+    "    return new_format_times\n",
+    "\n",
+    "\n",
     "import pathlib\n",
+    "\n",
+    "\n",
     "\n",
     "import pandas as pd\n",
     "from obspy import UTCDateTime\n",
@@ -210,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "dc23681c",
    "metadata": {},
    "outputs": [],
@@ -221,93 +292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "09edc6e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "files_list = sorted(glob('/1-fnp/petasaur/p-jbod1/antarctica2425/incoming/Eastwind_decimator_2024*'))\n",
-    "files_list = files_list[0:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1543c6bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load data #\n",
-    "f = h5py.File(file)\n",
-    "attrs = f['Acquisition'].attrs\n",
-    "data = f['Acquisition']['Raw[0]']['RawData'][:]\n",
-    "this_time = f['Acquisition']['Raw[0]']['RawDataTime'][:]\n",
-    "times = sintela_to_datetime(this_time)\n",
-    "x = np.linspace(0,data.shape[1],data.shape[1]) * attrs['SpatialSamplingInterval']\n",
-    "\n",
-    "\n",
-    "fs = attrs['PulseRate'] #sample rate\n",
-    "\n",
-    "#filter\n",
-    "sos = signal.butter(10, [1,200], 'bp', fs=fs, output='sos')\n",
-    "filtered = signal.sosfiltfilt(sos, data, axis=0)\n",
-    "\n",
-    "#normalize\n",
-    "data_normed_filtered = chan_norm(filtered)\n",
-    "\n",
-    "if file[-9:-7] != '00':\n",
-    "    time_start = times[0] - datetime.timedelta(seconds=times[0].second, microseconds=times[0].microsecond)\n",
-    "    forward_step = np.arange(time_start, times[0], 500).shape[0]\n",
-    "    data_locator = np.array([int(i) for i in (this_time-this_time[0])/500]) + forward_step -1\n",
-    "else:\n",
-    "    data_locator = np.array([int(i) for i in (this_time-this_time[0])/500])\n",
-    "\n",
-    "\n",
-    "\n",
-    "# this_time = np.arange(0,int(fs*60))* 500 + this_time[0]\n",
-    "# print(this_time)\n",
-    "\n",
-    "\n",
-    "filled_data = np.zeros((int(fs*60),data_normed_filtered.shape[0]))\n",
-    "filled_times = np.zeros((int(fs*60)), dtype=object)\n",
-    "\n",
-    "\n",
-    "filled_times[data_locator] = times\n",
-    "filled_data[data_locator] = data_normed_filtered.T\n",
-    "filt_filled_data = filled_data[:,:]\n",
-    "\n",
-    "## Downsample \n",
-    "filled_times = filled_times[::10]\n",
-    "filt_filled_data = filt_filled_data[::10,::10]\n",
-    "new_dict = dict(attrs)\n",
-    "new_dict['PulseRate'] = new_dict['PulseRate']/10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "62f0c39d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       ...,\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]], shape=(120000, 120000))"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filled_data"
+    "files_list = files_list[630:640]"
    ]
   },
   {
@@ -320,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "c1ded85d",
    "metadata": {},
    "outputs": [
@@ -328,39 +319,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 1/5 [00:06<00:27,  6.85s/it]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'filt_filled_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     11\u001b[39m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     first = copy.deepcopy(\u001b[43mfilt_filled_data\u001b[49m)\n\u001b[32m     16\u001b[39m     times_first = copy.deepcopy(times)\n\u001b[32m     17\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "\u001b[31mNameError\u001b[39m: name 'filt_filled_data' is not defined"
+      "100%|██████████| 10/10 [05:27<00:00, 32.71s/it]\n"
      ]
     }
    ],
    "source": [
     "trigger_on = 3.5\n",
     "trigger_off = 1.2\n",
-    "all_trigger_times = [[] for p in range(351)]\n",
+    "all_trigger_times = [[] for p in range(int(351 / 5))]\n",
     "\n",
     "for i in tqdm(range(len(files_list))):\n",
     "\n",
     "    if files_list[i][-9:-7] != '00' or i == 0:\n",
     "        try:\n",
     "            filt_filled_data, times, attrs = preprocessing_step(files_list[i])\n",
-    "        except: \n",
+    "        except Exception as e: \n",
+    "            print(e)\n",
+    "            \n",
     "            continue\n",
     "        \n",
     "\n",
@@ -369,7 +351,8 @@
     "        times_first = copy.deepcopy(times)\n",
     "        try:\n",
     "            filt_filled_data, times, attrs = preprocessing_step(files_list[i])\n",
-    "        except:\n",
+    "        except Exception as e: \n",
+    "            print(e)\n",
     "            continue\n",
     "        \n",
     "        # overlap_data[:,:] = filt_filled_data\n",
@@ -377,7 +360,12 @@
     "        all_data = np.concatenate((first,filt_filled_data), axis=0)\n",
     "        times_all = np.concatenate((times_first,times), axis=0)\n",
     "\n",
-    "        \n",
+    "        # fig,ax = plt.subplots()\n",
+    "        # ax.plot(all_data[:,30])\n",
+    "\n",
+    "        # fig,ax = plt.subplots()\n",
+    "        # ax.imshow(all_data, aspect='auto', vmin=-1, vmax=1)\n",
+    "\n",
     "        input_data_dict = {str(i):all_data[:,i] for i in range(all_data.shape[1])}\n",
     "\n",
     "        new_iterable = [[times_all,dict(attrs),i,input_data_dict[i]] for i in input_data_dict]\n",
@@ -406,14 +394,131 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "224d4e1e",
+   "id": "c0523884",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
+   "id": "a44e0b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data #\n",
+    "files_list = sorted(glob('/1-fnp/petasaur/p-jbod1/antarctica2425/incoming/Eastwind_decimator_2024*'))\n",
+    "file = files_list[631]\n",
+    "\n",
+    "f = h5py.File(file)\n",
+    "attrs = f['Acquisition'].attrs\n",
+    "data = f['Acquisition']['Raw[0]']['RawData'][:]\n",
+    "this_time = f['Acquisition']['Raw[0]']['RawDataTime'][:]\n",
+    "times = sintela_to_datetime(this_time)\n",
+    "x = np.linspace(0,data.shape[1],data.shape[1]) * attrs['SpatialSamplingInterval']\n",
+    "\n",
+    "\n",
+    "fs = attrs['PulseRate'] #sample rate\n",
+    "bp_top = 200\n",
+    "bp_bottom = 1\n",
+    "downsample_rate = int(fs/bp_top)\n",
+    "\n",
+    "#filter by freq\n",
+    "sos = signal.butter(10, [bp_bottom,bp_top], 'bp', fs=fs, output='sos')\n",
+    "filtered = signal.sosfiltfilt(sos, data, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2830a7c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# times_copy = times.copy()\n",
+    "# new_format_times = []\n",
+    "# for i in times_copy:\n",
+    "#     if round(i.microsecond/500)*500 == 1000000:\n",
+    "#         microsecond = 0\n",
+    "#         second = i.second + 1\n",
+    "#         minute = i.minute\n",
+    "#         hour = i.hour\n",
+    "#         day = i.day\n",
+    "#         if second == 60:\n",
+    "#             second = 0\n",
+    "#             minute = minute+1\n",
+    "\n",
+    "#         if minute == 60:\n",
+    "#             minute = 0\n",
+    "#             hour=hour+1\n",
+    "        \n",
+    "#         if hour == 24:\n",
+    "#             hour = 0\n",
+    "#             day = day+1\n",
+    "        \n",
+    "#     else:\n",
+    "#         microsecond = int(round(i.microsecond/500)*500)\n",
+    "#         second = i.second\n",
+    "#         minute = i.minute\n",
+    "#         hour = i.hour\n",
+    "#         day = i.day\n",
+    "\n",
+    "#     new_format_times.append(datetime.datetime(year=i.year,\n",
+    "#                                             month=i.month,\n",
+    "#                                             day=day,\n",
+    "#                                             hour=hour,\n",
+    "#                                             minute=minute,\n",
+    "#                                             second=second,\n",
+    "#                                             microsecond=microsecond))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "8f35976b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dims = ('time', 'distance')\n",
+    "patch = dc.Patch(data=filtered, coords=dict(time=[np.datetime64(i) for i in new_format_times], distance=x), dims=dims)\n",
+    "filt_cutoffs = np.array([0, 400, 8000, np.inf])\n",
+    "\n",
+    "fk_filtered = patch.slope_filter(filt=filt_cutoffs)\n",
+    "fk_filtered_data = np.array(fk_filtered.data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6672fe0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_trigs_flat = []\n",
+    "for n,i in enumerate(all_trigger_times):\n",
+    "    try:\n",
+    "        for q in i:\n",
+    "\n",
+    "            for trig in np.array(q)[:,0]:\n",
+    "\n",
+    "                all_trigs_flat.append(trig)\n",
+    "\n",
+    "    except:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17c2474e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "46f48acc",
    "metadata": {},
    "outputs": [
@@ -424,7 +529,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     11\u001b[39m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m     13\u001b[39m all_trigs_flat = \u001b[38;5;28msorted\u001b[39m(all_trigs_flat)\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m all_trigs_flat_no_duplicates = [\u001b[43mall_trigs_flat\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m]\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m,\u001b[38;5;28mlen\u001b[39m(all_trigs_flat), \u001b[32m1\u001b[39m):\n\u001b[32m     18\u001b[39m     diff = all_trigs_flat[k] - all_trigs_flat[k-\u001b[32m1\u001b[39m]\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     11\u001b[39m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m     13\u001b[39m all_trigs_flat = \u001b[38;5;28msorted\u001b[39m(all_trigs_flat)\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m all_trigs_flat_no_duplicates = [\u001b[43mall_trigs_flat\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m]\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m,\u001b[38;5;28mlen\u001b[39m(all_trigs_flat), \u001b[32m1\u001b[39m):\n\u001b[32m     18\u001b[39m     diff = all_trigs_flat[k] - all_trigs_flat[k-\u001b[32m1\u001b[39m]\n",
       "\u001b[31mIndexError\u001b[39m: list index out of range"
      ]
     }
